Greedy and binary search